Expanding on derivation of Delta rule

--- a/nn_coursera_hinton_scratchbook.ipynb
+++ b/nn_coursera_hinton_scratchbook.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "def get_angle_dot_vectors(v1,v2):\n",
+    "(def get_angle_dot_vectors(v1,v2):\n",
     "    \"\"\"\n",
     "    Returns the angle (in degrees) and dot product of 2 vectors\n",
     "    \"\"\"\n",
@@ -215,7 +215,7 @@
     "#Multidimentional\n",
     "v1 = np.random.rand(5)\n",
     "v2 = np.random.rand(5)\n",
-    "print(\"Multidimentional vectors\", v1, v2)\n",
+    "print(\"Multidimentional vectors\", v1, v2))\n",
     "print(get_angle_dot_vectors(v1,v2))"
    ]
   },
@@ -234,7 +234,62 @@
    "source": [
     "**Delta rule**\n",
     "\n",
-    "$\\Delta w_i=\\varepsilon x_i(t-y)$"
+    "$\\Delta w_i = -\\varepsilon x_i(t-y)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Derivation **\n",
+    "\n",
+    "Assume we have $N$ training samples and $W$ weight parameters.\n",
+    "\n",
+    "Our training samples are a matrix $x$ with element $x_{n,i}$ representing the $i$-th input value (column) for the $n$-th sample (row). $t$ represents a $N$-long vector containing the truth outcomes, while $y$ is a similarly $N$-long vector with the predicted outcomes.\n",
+    "\n",
+    "Our total model error $E = \\frac {1}{2} \\sum_{n \\in N} (t_n - y_n)^2$ and individual sample error $E_n = \\frac {1}{2}(t_n - y_n)^2$.\n",
+    "\n",
+    "We want to get the error $E$ to approach zero, thus we differentiate the error formula w.r.t. all weight parameters $W$. Since the same weight vector $W$ applies to all training cases, and each training case will yield a different partial differential for $W$, we can't in one go zero the error of all training cases.\n",
+    "\n",
+    "Instead we differentiate $E$, the sum of all errors on each weight parameter and substract the partial derivatives from the weight in the hope of minimizing the total error. If we do this for enough iteratios, we are guaranteed to reach a solution if a feasible solution exists. Convergence proof at http://www.cs.columbia.edu/~mcollins/courses/6998-2012/notes/perc.converge.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Partial derivatives: For $i \\in W , \n",
+    "\\frac{\\partial E}{\\partial w_i} = \\frac{1}{2} \\sum{n \\in N} \\frac{\\partial y_n}{\\partial w_i} \n",
+    "\\frac{dE_n}{dy_n}$ using chain rule\n",
+    "\n",
+    "Since $\\frac{\\partial y_n}{\\partial w_i} = x_{n,i}$, by definition of $y_n$, and $\\frac{dE_n}{dy_n} = (t_n - y_n)$ by applying the product rule to the definition of individual sample error.\n",
+    "\n",
+    "Thus $\\frac{\\partial E}{\\partial w_i} = x_{n,i}.(t_n - y_n)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get $\\Delta w_i$, we use multiply the partial derivative $\\frac{\\partial E}{\\partial w_i}$ by both $-1$ and $\\varepsilon$. The $-1$ ensures that the new error value is less than the current one, while $\\varepsilon$, a positive real number, is called the *training rate*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How** does multiplying by $-1$ ensure error $E$ is decreasing?\n",
+    "\n",
+    "From definition of differentiation and for any $w$ weight vector and $x$ input vector, $\\frac{\\partial E}{\\partial w} \\approx \\frac{\\Delta E}{\\Delta w}$ for an infinitesimally small $\\Delta w = w - w_o$. Thus $\\frac{E-E_o}{w-w_o} \\approx (t-y).x$\n",
+    "\n",
+    "Assume $\\Delta w = -\\varepsilon.(t-y).x$, then $E-E_o = (\\varepsilon.(t-y).x).((t-y).x) = -\\varepsilon.(t-y)^2.x^2$, which is always negative. Thus, assuming a small value for $\\varepsilon$, adding the negative valued $\\Delta w$ to the current weights $w_o$, we will get the desired effect of lowering $E$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Why** we use the learning rate $\\varepsilon$, and how to set it? "
    ]
   }
  ],
