More work on perceptron differentials

--- a/nn_coursera_hinton_scratchbook.ipynb
+++ b/nn_coursera_hinton_scratchbook.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Delta rule**\n",
+    "**Delta rule** for **linear** neuron\n",
     "\n",
     "$\\Delta w_i = -\\varepsilon x_i(t-y)$"
    ]
@@ -259,7 +259,7 @@
    "metadata": {},
    "source": [
     "Partial derivatives: For $i \\in W , \n",
-    "\\frac{\\partial E}{\\partial w_i} = \\frac{1}{2} \\sum{n \\in N} \\frac{\\partial y_n}{\\partial w_i} \n",
+    "\\frac{\\partial E}{\\partial w_i} = \\frac{1}{2} \\sum_{n \\in N} \\frac{\\partial y_n}{\\partial w_i} \n",
     "\\frac{dE_n}{dy_n}$ using chain rule\n",
     "\n",
     "Since $\\frac{\\partial y_n}{\\partial w_i} = x_{n,i}$, by definition of $y_n$, and $\\frac{dE_n}{dy_n} = (t_n - y_n)$ by applying the product rule to the definition of individual sample error.\n",
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**How** does multiplying by $-1$ ensure error $E$ is decreasing?\n",
+    "**How** does multiplying by $-1$ ensure error $E$ is decreasing? Courtsey of http://users.sussex.ac.uk/~khs20/mtcs/mtcs/tutorial2.html\n",
     "\n",
     "From definition of differentiation and for any $w$ weight vector and $x$ input vector, $\\frac{\\partial E}{\\partial w} \\approx \\frac{\\Delta E}{\\Delta w}$ for an infinitesimally small $\\Delta w = w - w_o$. Thus $\\frac{E-E_o}{w-w_o} \\approx (t-y).x$\n",
     "\n",
@@ -290,6 +290,72 @@
    "metadata": {},
    "source": [
     "**Why** we use the learning rate $\\varepsilon$, and how to set it? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Finally we conclude that, the **batch delta** rule is $\\Delta w_i = -\\varepsilon \\sum_{n \\in N}x_{n,i}.(t_n - y_n)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Error surface of neuron**\n",
+    "\n",
+    "requires simulation data, tbd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Delta rule** for **logistic** neuron\n",
+    "\n",
+    "For a logistic neuron where $y = \\frac{1}{1+e^{-z}}$ with $z = b+\\sum_i x_iw_i$\n",
+    "\n",
+    "$\\Delta w_i = -\\varepsilon x_i.y.(1-y).(t-y)$\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Derivation**:\n",
+    "\n",
+    "$\\frac{\\partial E}{\\partial w_i} = \\sum_{n \\in N}\\frac{\\partial y_n}{\\partial w_i} \\frac{dE_n}{dy_n} = \\sum_{n \\in N}\\frac{\\partial z_n}{\\partial w_i} \\frac{dy_n}{dz_n} \\frac{dE_n}{dy_n}$ using chain rule."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now work out all 3 components;\n",
+    "\n",
+    "- $\\frac{\\partial z_n}{\\partial w_i} = x_{n,i}$\n",
+    "- $\\frac{dy_n}{dz_n} = y.(1-y)$, here is how;\n",
+    "    - Since $y = (1+e^{-z})^{-1}$\n",
+    "    - $\\frac{dy}{dz} = \\frac{-1.e^{-z}}{(1+e^{-z})^2}$, using power rule, $ = \\frac{1}{1+e^{-z}}.\\frac{e^{-z}}{1+e^{-z}} \\\\\n",
+    "    = y.\\frac{(1+e^{-z})-1}{1+e^{-z}} \\\\\n",
+    "    = y.\\frac{(1+e^{-z})}{1+e^{-z}}.\\frac{-1}{1+e^{-z}} \\\\\n",
+    "    = y.(1-y)$\n",
+    "- $\\frac{dE_n}{dy_n} = (t_n - y_n)$ by using the power rule\n",
+    "\n",
+    "Back to deriving our error function, $\\frac{\\partial E}{\\partial w_i} = x_{n,i}.y.(1 - y).(t_n - y_n)$ and for a batch weight correction, we use $\\Delta w_i = -\\varepsilon \\sum_{n \\in N}x_{n,i}.(t_n - y_n)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Backpropagation**\n",
+    "\n",
+    "Assume the output value $y_i$, created by neuron $j$ activated by value $z_j$. $z_j$ is the sigmoid of $y_i$, the output of neuron $i$. We also assume that the neuron $i$ is in the hidden layer where other neurons in layer $i$ feed into the neuron $j$ in a following layer. \n",
+    "\n",
+    "PUT PICTURE FROM SLIDE 28 of lec.3\n",
+    "\n",
+    "\n"
    ]
   }
  ],
